--- a/styles/style.css
+++ b/styles/style.css
@@ -38,3 +38,9 @@ img {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+/* 
+Add the appropriate HTML / CSS, so that if the viewport is smaller than 960px, the image will be displayed in landscape and at an adequate resolution.
+
+Add the appropriate HTML / CSS, so that if the viewport is 960px or larger, the image displayed is square and at an adequate resolution. 
+*/
